--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   # Provider
   provider: ^6.1.2
 
+  # QR Code
+  qr_flutter: ^4.1.0
+
+  # Firebase
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.0
 
 
 dev_dependencies:
